--- a/style.css
+++ b/style.css
@@ -20,5 +20,5 @@ ol{
 }
 
 body{
-  background-color: lightgrey;
+    background: linear-gradient(45deg,#FF0000,#FF7F00,#FFFF00,#00FF00,#0000FF,#4B0082,#8B00FF);
 }
